syntax = "proto3";
package pbserver;


message GSMessageToFS {
  bytes msg = 1;
  int32 crossServerId=2;//
  int32 serverId = 3;//
  int32 gsTransId = 4;
}

message FSMessageToGS {
  bytes msg = 1;
  int32 crossServerId=2;//
  int32 serverId = 3;//
  int32 gsTransId = 4;
}

message FSCallMessageToGS{
  bytes msg = 1;
  int32 crossServerId=2;//
  int32 serverId = 3;//
  int32 fsTransId = 4;//
}

message GSCallMessageToFS{
  bytes msg = 1;
  int32 crossServerId=2;//
  int32 serverId = 3;//
  int32 fsTransId = 4;//
}